# aoc-2025

./: Cargo.toml  LICENSE  README.md  clippy.bat  pyproject.toml  runrs.bat
aoc-py/: __init__.py  runner.py  solution.py  utils.py
aoc-py/solutions/: __init__.py  day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/: lib.rs  main.rs  solution.rs  util.rs
