[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tom-the-Bomb"]
description = "Rust solutions for the 2025 Advent of Code"
repository = "https://github.com/Tom-the-Bomb/aoc-2025"
keywords = ["adventofcode", "aoc"]
categories = ["Algorithms", "Command line utilities"]

[profile.release]
overflow-checks = true
lto = "fat"

[dependencies]
fancy-regex = "^0.17"
lazy_static = "^1.5"
itertools = "^0.14"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"

[[bin]]
name = "day3"
path = "src/bin/day3.rs"

[[bin]]
name = "day4"
path = "src/bin/day4.rs"

[[bin]]
name = "day5"
path = "src/bin/day5.rs"

[[bin]]
name = "day6"
path = "src/bin/day6.rs"

[[bin]]
name = "day7"
path = "src/bin/day7.rs"

[[bin]]
name = "day8"
path = "src/bin/day8.rs"